fix: yaml error

--- a/pic/p-2023-08-04-river/_.yaml
+++ b/pic/p-2023-08-04-river/_.yaml
@@ -1,8 +1,8 @@
 title:
   cn: 河流
   en: river
-date: 2023-08-04
-address: -
+date: "2023-08-04"
+address: "-"
 film:
   - id: _DSC2349
     size: [5746,3670]
