--- a/pic/p-2023-08-04-river/_.yaml
+++ b/pic/p-2023-08-04-river/_.yaml
@@ -1,8 +1,6 @@
-title:
-  cn: 河流
-  en: river
+title: 河流
 date: 2023\-08\-04
-address: \-
+address: 四川、雅安
 film:
   - id: _DSC2349
     size: [5746,3670]
